fixed navbar covering top content

--- a/css/default.css
+++ b/css/default.css
@@ -2,6 +2,9 @@
   border-radius: 0 !important;
   margin: 0 0 0 0 !important;
 }
+body { 
+    padding-top: 60px; 
+}
 #Activity div {
   background-color: #337ab7;
 }
